@@ -13,9 +13,8 @@ import tr.bel.gaziantep.bysweb.core.controller.AbstractController;
 import tr.bel.gaziantep.bysweb.core.entity.BaseEntity;
 import tr.bel.gaziantep.bysweb.core.utils.Constants;
 import tr.bel.gaziantep.bysweb.core.utils.FacesUtil;
-import tr.bel.gaziantep.bysweb.moduls.sistemyonetimi.entity.SyRol;
-import tr.bel.gaziantep.bysweb.moduls.sistemyonetimi.entity.SyRolYetki;
-import tr.bel.gaziantep.bysweb.moduls.sistemyonetimi.entity.SyYetki;
+import tr.bel.gaziantep.bysweb.moduls.sistemyonetimi.entity.*;
+import tr.bel.gaziantep.bysweb.moduls.sistemyonetimi.service.SyKullaniciService;
 import tr.bel.gaziantep.bysweb.moduls.sistemyonetimi.service.SyRolService;
 import tr.bel.gaziantep.bysweb.moduls.sistemyonetimi.service.SyYetkiService;
 
@@ -42,11 +41,17 @@ public class SyRolController extends AbstractController<SyRol> {
     private SyRolService service;
     @Inject
     private SyYetkiService yetkiService;
+    @Inject
+    private SyKullaniciService syKullaniciService;
 
     @Getter
     @Setter
     private List<SyYetki> selectedYetkis;
     private List<SyYetki> yetkiList=new ArrayList<>();
+    @Getter
+    @Setter
+    private List<SyKullanici> selectedKullanicis;
+    private List<SyKullanici> kullaniciList=new ArrayList<>();
 
     public SyRolController() {
         super(SyRol.class);
@@ -60,6 +65,8 @@ public class SyRolController extends AbstractController<SyRol> {
             newItem = SyRol.class.getDeclaredConstructor().newInstance();
             selectedYetkis = new ArrayList<>();
             yetkiList = yetkiService.findAll();
+            selectedKullanicis = new ArrayList<>();
+            kullaniciList = syKullaniciService.findAll();
             this.setSelected(newItem);
             initializeEmbeddableKey();
             return newItem;
@@ -72,7 +79,7 @@ public class SyRolController extends AbstractController<SyRol> {
     public void create() {
         if (this.getSelected() == null) return;
         try {
-            service.update(this.getSelected(), selectedYetkis);
+            service.update(this.getSelected(), selectedYetkis,selectedKullanicis);
             FacesUtil.successMessage(Constants.KAYIT_EKLENDI);
         } catch (Exception ex) {
             log.error(null, ex);
@@ -83,7 +90,7 @@ public class SyRolController extends AbstractController<SyRol> {
     public void update() {
         if (this.getSelected() == null) return;
         try {
-            service.update(this.getSelected(), selectedYetkis);
+            service.update(this.getSelected(), selectedYetkis,selectedKullanicis);
             FacesUtil.successMessage(Constants.KAYIT_GUNCELLENDI);
         } catch (Exception ex) {
             log.error(null, ex);
@@ -94,8 +101,12 @@ public class SyRolController extends AbstractController<SyRol> {
     public void readInfo() {
         if (this.getSelected() == null) return;
         selectedYetkis =
-                this.getSelected().getSyRolYetkis().stream().filter(BaseEntity::isAktif).map(SyRolYetki::getSyYetki).collect(Collectors.toList());
+                this.getSelected().getSyRolYetkis().stream().filter(BaseEntity::isAktif).map(SyRolYetki::getSyYetki).toList();
         yetkiList = yetkiService.findAll();
+
+        selectedKullanicis = this.getSelected().getSyKullaniciRolList().stream().filter(BaseEntity::isAktif).map(SyKullaniciRol::getSyKullanici).toList();
+
+        kullaniciList = syKullaniciService.findAll();
     }
 
     public List<SyYetki> completeYetkis(String query) {
@@ -114,6 +125,25 @@ public class SyRolController extends AbstractController<SyRol> {
         SyYetki yetki = event.getObject();
         if (!selectedYetkis.contains(yetki)) {
             selectedYetkis.add(yetki);
+        }
+    }
+
+    public List<SyKullanici> completeKullanicis(String query) {
+        String queryLowerCase = query.toLowerCase();
+        List<SyKullanici> result = kullaniciList.stream().filter(t ->t.getKullaniciAdi().toLowerCase().contains(queryLowerCase)).collect(Collectors.toList());
+        result.removeAll(selectedKullanicis);
+        return result;
+    }
+
+    public void onItemUnSelectKullanici(UnselectEvent<SyKullanici> event) {
+        SyKullanici kullanici = event.getObject();
+        selectedKullanicis.remove(kullanici);
+    }
+
+    public void onItemSelectKullanici(SelectEvent<SyKullanici> event) {
+        SyKullanici kullanici = event.getObject();
+        if (!selectedKullanicis.contains(kullanici)) {
+            selectedKullanicis.add(kullanici);
         }
     }
 
